# public/swagger.json
@@ -18,11 +18,19 @@
   "tags": [
     {
       "name": "XM_Overview_INFO",
-      "description": "Everything about your HomePage",
+      "description": "Everything about your XM_Overview_INFO",
       "externalDocs": {
         "description": "Find out more",
         "url": "http://localhost:3000"
-      }
+      },
+    },
+    {
+      "name": "XM_Voyage_INFO",
+      "description": "Everything about your XM_Voyage_INFO",
+      "externalDocs": {
+        "description": "Find out more",
+        "url": "http://localhost:3000"
+      },
     }
   ],
   "schemes": [
@@ -102,6 +110,78 @@
         }
       }
     },
+    "/getVoyageInfo": {
+      "get": {
+        "tags": [
+          "XM_Voyage_INFO"
+        ],
+        "summary": "获取航次主页信息",
+        "description": "图二数据获取",
+        "operationId": "getVoyageInfo",
+        "consumes": [
+          "application/json",
+          "application/xml"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "VoyageName",
+            "description": "航次名称",
+            "required": true,
+            "default": KK1801,
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "string",
+                  "description": "概要ID"
+                },
+                "VoyageNumberID": {
+                  "type": "string",
+                  "description": "航次ID"
+                },
+                "VoyageName": {
+                  "type": "string",
+                  "description": "航次名称"
+                },
+                "ImageUrl": {
+                  "type": "string",
+                  "description": "航线图"
+                },
+                "Introduce": {
+                  "type": "string",
+                  "description": "航次介绍"
+                },
+                "IntroduceUrl": {
+                  "type": "string",
+                  "description": "航次介绍图"
+                },
+                "Parameter": {
+                  "type": "string",
+                  "description": "测量参数"
+                },
+                "Equipment": {
+                  "type": "string",
+                  "description": "作业设备"
+                },
+                "EquipmentUrl": {
+                  "type": "string",
+                  "description": "作业设备图"
+                }
+              }
+            }  
+          }
+        }
+      }
+    }
   },
   "securityDefinitions": {
     "petstore_auth": {
