# routes/index.js
@@ -5,7 +5,7 @@ var url = require('url');
 var util = require('util');
 var index = require('../model/index');
 
-/* GET home page. */
+/* GET OverviewInfo. */
 router.route('/getOverviewInfo')
 	.get(function(req, res) {
 		var VoyageName = req.query.VoyageName;
@@ -15,4 +15,14 @@ router.route('/getOverviewInfo')
 		index.getOverviewInfo(VoyageName, callback);
 	})
 
+/* GET home page. */
+router.route('/getVoyageInfo')
+	.get(function(req, res) {
+		var VoyageName = req.query.VoyageName;
+		var callback = function(code, message, result) {
+			res.json({code: code, message: message, result: result})
+		}
+		index.getVoyageInfo(VoyageName, callback);
+	})
+	
 module.exports = router;
